--- a/404.html
+++ b/404.html
@@ -100,5 +100,5 @@
 <link rel="prefetch" as="script" crossorigin href="/_nuxt/DjcPwgS2.js">
 <meta name="description" content>
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
-<script type="module" src="/_nuxt/B55AcAOi.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script>window.__NUXT_SITE_CONFIG__={env:"production",name:"WinterCCC - 万花筒工具箱",url:"https:\u002F\u002Ftools.winterccc.com\u002F"}</script><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"serverRendered":1},false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{MODE:"",NODE_ENV:"production",NAME:"winterccc"},app:{baseURL:"/",buildId:"048d10f5-0018-4718-acde-09694d162388",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/B55AcAOi.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script>window.__NUXT_SITE_CONFIG__={env:"production",name:"WinterCCC - 万花筒工具箱",url:"https:\u002F\u002Fwinterccc.com\u002F"}</script><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"serverRendered":1},false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{MODE:"",NODE_ENV:"production",NAME:"winterccc"},app:{baseURL:"/",buildId:"970df4a1-166d-449c-ab71-44da3991d41d",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
